# QMusicPlayer

./: .gitignore  AboutApp.cpp  AboutApp.h  AboutApp.ui  AppConfig.h  CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  MusicPlayer.rc  MusicPlayer.ui  Options.cpp  Options.h  Options.ui  Player.cpp  Player.h  Player.ui  README.md  main.cpp  playlist.cpp  playlist.h  resource.qrc
themes/: CoolDark.qss  CoolLight.qss
